k8s/users/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: microstore
  labels:
    app: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: <TU_REGISTRY>/users:latest
          ports:
            - containerPort: 5002
          readinessProbe:
            httpGet:
              path: /api/users
              port: 5002
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/users
              port: 5002
            initialDelaySeconds: 60
            periodSeconds: 30
