k8s/users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: microstore
  labels:
    app: users
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5002
      protocol: TCP
  selector:
    app: users
